Se hiceron cambios para mejorar la funcionalida del sistema

--- a/TallerNode/tallernode.html
+++ b/TallerNode/tallernode.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokédex</title>
+    <title>Taller Node</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./js/tallernode.js"></script>
 </head>
 <body>
     <h1>Bienvenido a la Base de datos de Taller de Node.js S.A. de C.V.</h1>
+    <h3>Elige entre estas opciones:</h3>
+    <ul>
+        <li><a href="add.html">Agregar empleado</a></li>
+        <li><a href="edit.html">Modificar datos de empleado</a></li>
+        <li><a href="delete.html">Eliminar empleado</a></li>
+        <li><a href="search.html">Buscar empleado</a></li>
+    </ul>
 </body>
 </html>
