Se añadió la estructura de la página principal

--- a/TallerNode/tallernode.html
+++ b/TallerNode/tallernode.html
@@ -16,5 +16,27 @@
         <li><a href="delete.html">Eliminar empleado</a></li>
         <li><a href="search.html">Buscar empleado</a></li>
     </ul>
+
+    <!-- Tabla para mostrar empleados -->
+    <table class="table mt-5">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Nombre</th>
+                <th>Apellido</th>
+                <th>Email</th>
+                <th>Teléfono</th>
+                <th>Dirección</th>
+                <th>Acciones</th>
+            </tr>
+        </thead>
+        <tbody id="employeeTable">
+            <!-- Las filas se llenarán dinámicamente -->
+        </tbody>
+    </table>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
