Se hiceron algunas correcciones y mejoras de la función search

--- a/TallerNode/search.html
+++ b/TallerNode/search.html
@@ -26,6 +26,7 @@
         <input type="text" id="search-input" class="form-control" placeholder="Ingrese el dato del empleado">
     </div>
     <button class="btn btn-primary" id="search-button">Buscar</button>
+    <button class="btn btn-secondary" id="return">Volver</button>
     <div id="employee-details" class="mt-5">
         <!-- Aquí se mostrarán los detalles del empleado -->
     </div>
