--- a/TallerNode/tallernode.html
+++ b/TallerNode/tallernode.html
@@ -21,7 +21,7 @@
         <a class="navbar-brand" href="add.html">Añadir empleado</a>
         <a class="navbar-brand" href="add.html">Modificar datos de empleado</a>
         <a class="navbar-brand" href="add.html">Eliminar empleado</a>
-        <a class="navbar-brand" href="add.html">Buscar empleado</a>
+        <a class="navbar-brand" href="search.html">Buscar empleado</a>
     </nav>
 
     <div>
