Se realizaron modificaciones y mejoras en las funciones add y search

--- a/TallerNode/add.html
+++ b/TallerNode/add.html
@@ -52,6 +52,9 @@
             </div>
         </div>
     </div>
+    <div id="message">
+        <!-- Aquí se mostrarán los mensajes de éxito o error -->
+    </div>
 
 </body>
 </html>
