Se hicieron modificiones para mostrar los datos en la tabla de la página principal

--- a/TallerNode/tallernode.html
+++ b/TallerNode/tallernode.html
@@ -5,45 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="./js/delete.js"></script>
+    <script src="../TallerNode/js/tallernode.js"></script>
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap5.min.css">
-    <title>Document</title>
+    <title>Taller Node</title>
 </head>
 <body>
-    <h3>Estás en el apartado de Acciones</h3>
     <div class="container">
-        <table class="table" id="employee">
-    <center>
-        <h1>Bienvenido a la Base de datos de Taller de Node.js S.A. de C.V.</h1>
-    </center>
-    <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="add.html">Añadir empleado</a>
-        <a class="navbar-brand" href="add.html">Modificar datos de empleado</a>
-        <a class="navbar-brand" href="add.html">Eliminar empleado</a>
-        <a class="navbar-brand" href="search.html">Buscar empleado</a>
-    </nav>
+        <center>
+            <h1>Bienvenido a la Base de datos de Taller de Node.js S.A. de C.V.</h1>
+        </center>
+        <nav class="navbar navbar-dark bg-dark">
+            <a class="navbar-brand" href="add.html">Añadir empleado</a>
+            <a class="navbar-brand" href="search.html">Buscar empleado</a>
+        </nav>
+    </div>
 
-    <div>
-        <!-- Tabla para mostrar empleados -->
-        <table class="table mt-5">
-            <thead>
-                <tr>
-                    <th scope="col">Numero</th>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Apellido</th>
-                    <th scope="col">Telefono Celular</th>
-                    <th scope="col">Correo Electrónico</th>
-                    <th scope="col">Dirección</th>
-                    <th scope="col">Acciones</th>
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
-    </div>   
-    <script>
-
-    </script>
+     <!-- Tabla para mostrar empleados -->
+     <table class="table mt-5" id="employee-table">
+        <thead>
+            <tr>
+                <th scope="col">Numero</th>
+                <th scope="col">Nombre</th>
+                <th scope="col">Apellido</th>
+                <th scope="col">Telefono Celular</th>
+                <th scope="col">Correo Electrónico</th>
+                <th scope="col">Dirección</th>
+                <th scope="col">Acciones</th>
+            </tr>
+        </thead>
+        <tbody id="employee-columns">
+            <!-- Aquí se imprimen los datos -->
+        </tbody>
+    </table>
 </body>
 </html>
