--- a/TallerNode/tallernode.html
+++ b/TallerNode/tallernode.html
@@ -18,6 +18,8 @@
         <nav class="navbar navbar-dark bg-dark">
             <a class="navbar-brand" href="add.html">Añadir empleado</a>
             <a class="navbar-brand" href="search.html">Buscar empleado</a>
+            <a class="navbar-brand" href="edit.html">Editar empleado</a>
+            <a class="navbar-brand" href="delete.html">Eliminar empleado</a>
         </nav>
     </div>
 
@@ -31,7 +33,6 @@
                 <th scope="col">Telefono Celular</th>
                 <th scope="col">Correo Electrónico</th>
                 <th scope="col">Dirección</th>
-                <th scope="col">Acciones</th>
             </tr>
         </thead>
         <tbody id="employee-columns">
