--- a/TallerNode/add.html
+++ b/TallerNode/add.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,14 +11,32 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./js/add.js"></script>
+    <style>
+        .main-container {
+            background-color: #f9f9f9;
+            padding: 2rem;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.1);
+        }
+        h2 {
+            text-align: center;
+            margin-bottom: 2rem;
+            color: #333;
+        }
+        button.btn-primary {
+            background-color: #007BFF;
+            border: none;
+        }
+        button.btn-secondary {
+            background-color: #ccc;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-
-    <!-- Formulario para agregar empleados -->
-    <div class="container">
-        <div class="row mt-5">
-            <div class="col-6 offset-3">
-                <h2>Agregar Empleado</h2>
+<div class="container mt-5">
+    <div class="main-container">
+        <h2>Agregar Empleado</h2>
             </div>
         </div>
         <div class="row align-items-center">
